docs(milestones): 更新 v0.4.0 文档，添加 react-app 重构思路
添加关于 react-app 重构的具体思路，包括去除 Context 使用、组合式组件重构和 @dify-chat/components 子包的改进

--- a/docs/milestones/v0.4.0.md
+++ b/docs/milestones/v0.4.0.md
@@ -8,3 +8,12 @@
     - [ ] 环境变量说明
 - TailwindCSS 版本升级到 V4
 - 支持分享应用和对话
+
+## react-app 的重构思路：
+
+- 尽量去除 Context 的使用
+- 使用组合式思想重构组件嵌套
+  - 系统运行参数，直接通过 props 传入，或提供公共参数获取，如 mode
+  - 全局依赖，如 appService，直接将 api 函数作为 props 传入，在外部通过一次初始化取不同属性注入不同组件
+  - 缓存状态信息，如 user，直接注入到最底层请求方法，注入方式可以是分布式 store 或者本地存储（前者更加，多开页面时数据不会混淆）
+- `@dify-chat/components` 子包去除 Context 依赖，成为 PureComponent
