docs(milestones): 更新v0.4.0里程碑文档内容

--- a/docs/milestones/v0.4.0.md
+++ b/docs/milestones/v0.4.0.md
@@ -17,3 +17,9 @@
   - 全局依赖，如 appService，直接将 api 函数作为 props 传入，在外部通过一次初始化取不同属性注入不同组件
   - 缓存状态信息，如 user，直接注入到最底层请求方法，注入方式可以是分布式 store 或者本地存储（前者更加，多开页面时数据不会混淆）
 - `@dify-chat/components` 子包去除 Context 依赖，成为 PureComponent
+
+## 更新内容
+
+- 【Components】开场白标题支持换行
+- 【React APP】开发服务器支持外部访问
+- 旧版本浏览器支持主题监听
