refactor(docs): 修改应用配置文档，大幅简化层级结构，使文档更加清晰易懂

--- a/packages/docs/docs/guide/app-config/config-single/custom-app-config.mdx
+++ b/packages/docs/docs/guide/app-config/config-single/custom-app-config.mdx
@@ -21,52 +21,28 @@ RUNNING_MODE=singleApp
 	</Tab>
 </Tabs>
 
-## 修改默认应用配置管理方式
+## 自定义应用配置
+
+Dify Chat 已经内置了多种应用配置管理方式，满足不同场景需求，你可以根据你的需求选择合适的方式。
 
 ### React SPA 版本
 
-应用管理服务定义入口：
+#### 配置入口
 
 ```tsx title="packages/react-app/src/services/app/singleApp/index.ts"
 // 默认使用 LocalStorage 存储
 export { appConfig } from './localstorage'
 ```
 
-在 `packages/react-app/src/services/app/singleApp` 目录下，分别有三种应用配置存储的实现形式：
+#### 内置实现
 
-- `static-readonly`, 写死在代码中的配置，只支持读取，不支持修改数据
-- `localstorage`, 使用 LocalStorage 存储，支持读取和修改，但无法跨浏览器同步
-- `restful`, 通过 API 接口存储，支持读取和修改，推荐使用🌟
+**1. LocalStorage**
 
-你可以根据你的需要自行选择，也可以修改代码或扩展其他实现形式，最终只要通过 `src/services/app/singleApp/index.ts` 导出即可。
+使用 LocalStorage 存储和修改数据，当用户切换浏览器后，数据会丢失，仅作为演示用。
 
-### Next.js 版本
+**2. 静态数据**
 
-应用管理服务定义入口：
-
-```ts title="packages/nextjs-appservices/app/index.ts"
-# 使用 fs 实现
-export * from "./fs";
-```
-
-在 `packages/nextjs-app/services/app` 目录下，实现了两种应用配置的存储形式：
-
-- `fs`, 基于本地文件的存储，支持读取和修改，但存在丢失数据的风险
-- `restful`, 通过 API 接口管理，支持读取和修改，推荐使用🌟
-
-你可以根据你的需要自行选择，也可以修改代码或扩展其他实现形式，最终只要通过 `packages/nextjs-app/services/app/index.ts` 导出即可。
-
-## 预设应用配置管理方式
-
-### React SPA 版本
-
-1. LocalStorage 实现
-
-使用 LocalStorage 数据进行存储，当用户切换浏览器后，数据会丢失，仅作为演示用。
-
-2. 静态数据实现
-
-使用静态数据进行存储，仅支持查询，不支持修改数据，适用于修改频率不高，用户无需自定义应用的场景。
+使用静态数据进行存储，仅支持查询，适用于用户无需自定义应用的场景。
 
 定义配置：
 
@@ -91,26 +67,18 @@ export const staticAppConfig = {
 }
 ```
 
-3. Restful 实现
+**3. Restful API**
 
-通过 API 接口管理，支持完整的 CRUD，推荐使用🌟
+通过接口获取和修改数据，推荐使用🌟
 
 默认请求的后端服务地址为 `http://localhost:3000`，你可以根据你的需要修改。
 
-然后在对应的 restful 实现中，修改调用的 BaseURL 即可。
+在对应的 restful 实现中，修改调用的 BaseURL 即可。
 
-<Tabs>
-  <Tab label="React SPA">
 ```ts title="packages/react-app/src/services/app/singleApp/restful.ts"
-const API_BASE_URL = 'http://localhost:3000'
+// 比如你的自定义后端服务地址是 http://localhost:4567
+const API_BASE_URL = 'http://localhost:4567'
 ```
-	</Tab>
-  <Tab label="Next.js">
-```ts title="packages/nextjs-app/services/app/restful.ts"
-const API_BASE_URL = 'http://localhost:3000'
-```
-	</Tab>
-</Tabs>
 
 你需要自行实现以下接口以完成应用配置的读取和保存：
 
@@ -121,11 +89,20 @@ const API_BASE_URL = 'http://localhost:3000'
 
 ### Next.js 版本
 
-1. 本地文件实现
+#### 配置入口
+
+```ts title="packages/nextjs-app/services/app/singleApp/index.ts"
+// 使用 fs 实现
+export { appConfig } from "./fs";
+```
+
+#### 内置实现
+
+**1. 本地文件存储**
 
 使用本地文件进行存储，支持读取和修改，但存在丢失数据的风险。
 
-2. Restful 实现
+**2. Restful API**
 
 通过 API 接口管理，支持读取和修改，推荐使用🌟
 
@@ -133,18 +110,10 @@ const API_BASE_URL = 'http://localhost:3000'
 
 然后在对应的 restful 实现中，修改调用的 BaseURL 即可。
 
-<Tabs>
-  <Tab label="React SPA">
-```ts title="packages/react-app/src/services/app/singleApp/restful.ts"
-const API_BASE_URL = 'http://localhost:3000'
+```ts title="packages/nextjs-app/services/app/singleApp/restful.ts"
+// 比如你的自定义后端服务地址是 http://localhost:4567
+const API_BASE_URL = 'http://localhost:4567'
 ```
-	</Tab>
-  <Tab label="Next.js">
-```ts title="packages/nextjs-app/services/app/restful.ts"
-const API_BASE_URL = 'http://localhost:3000'
-```
-	</Tab>
-</Tabs>
 
 你需要自行实现以下接口以完成应用配置的读取和保存：
 
