refactor(docs): update Docker deployment section to clarify community contribution

--- a/packages/docs/docs/guide/development/deploy-docker.mdx
+++ b/packages/docs/docs/guide/development/deploy-docker.mdx
@@ -1,7 +1,7 @@
 # 部署 - 使用 Docker
 
 :::tip
-本章节由社区贡献者 @[@hitechbeijing](https://github.com/hitechbeijing) 提供。
+本章节内容及 Docker 容器化部署功能由社区贡献者 @[@hitechbeijing](https://github.com/hitechbeijing) 提供。
 :::
 
 ## 容器运行
