docs(milestones): 更新 v0.5.0 里程碑文档，补充 Platform 应用功能
- 添加 Platform 应用支持的功能描述
- 补充开场白优化支持 HTML 渲染

--- a/docs/milestones/v0.5.0.md
+++ b/docs/milestones/v0.5.0.md
@@ -3,6 +3,7 @@
 - 回复表单支持下拉选项/日期类型控件
 - 支持全局参数
 - 支持隐藏参数
-- 支持应用配置持久化存储
+- 新增 Platform 应用，支持应用配置持久化存储、用户管理、Dify API 代理
 - 对话列表和消息列表 API 支持自定义分页参数和 first_id/last_id
 - 统一 DifyApi 方法名，遵循 RESTful 规范
+- 开场白优化，支持渲染 HTML
