docs: 更新 v0.5.0 里程碑文档
- 添加移除 rybbit 引入和修复 Console 面板报错的记录
- 添加统一标题风格和图标的记录

--- a/docs/milestones/v0.5.0.md
+++ b/docs/milestones/v0.5.0.md
@@ -7,3 +7,5 @@
 - 对话列表和消息列表 API 支持自定义分页参数和 first_id/last_id
 - 统一 DifyApi 方法名，遵循 RESTful 规范
 - 开场白优化，支持渲染 HTML
+- 移除 rybbit 引入，修复 Console 面板报错
+- 统一 Platform、React APP、Docs 站点的标题风格和图标
