docs(milestones): 更新 v0.5.0 里程碑文档，添加功能变更说明
- 添加关于不再区分单应用和多应用模式的说明

--- a/docs/milestones/v0.5.0.md
+++ b/docs/milestones/v0.5.0.md
@@ -10,3 +10,4 @@
 - 移除 rybbit 引入，修复 Console 面板报错
 - 统一 Platform、React APP、Docs 站点的标题风格和图标
 - 新增调试模式，支持在调试模式下编辑应用配置，快速调试应用功能
+- 不再区分单应用和多应用模式，默认提供聚合页和详情页，当总共只有一个应用时，直接跳转详情
